--- a/GameNight/Client/wwwroot/css/app.css
+++ b/GameNight/Client/wwwroot/css/app.css
@@ -30,3 +30,11 @@ h1:focus {
     .blazor-error-boundary::after {
         content: "An error has occurred."
     }
+
+td {
+    border: 1px solid black;
+} 
+
+table{
+    border-collapse: collapse;
+}
