Added Basic Game List (#4)
* Added played game models

* Added PlayedGame Controller

* Added fetching of played games from client

* Code with error

* Fix de-serialization

* Display Formatted list

* Removed Extra Lines

---------

Co-authored-by: Artem Chetverikov <artemchetverikov@gmail.com>

--- a/GameNight/Client/Pages/Index.razor
+++ b/GameNight/Client/Pages/Index.razor
@@ -1,3 +1,63 @@
 ﻿@page "/"
+@using GameNight.Shared;
+@using System.Text.Json
+@using System.Text.Json.Serialization
+@inject IHttpClientFactory ClientFactory
 
-<h1>Hello, world!</h1>
+<h1>Played Games</h1>
+<table>
+    <tr>
+        <td>Game Name</td>
+        <td>Date Played</td>
+        <td>Game Length</td>
+        <td>Winner(s)</td>
+        <td>Players</td>
+    </tr>
+    @foreach (var playedGame in playedGames)
+    {
+        <tr>
+            <td>
+                @playedGame.GameName
+            </td>
+            <td>
+                @playedGame.StartedAtUtc.ToShortDateString()
+            </td>
+            <td>
+                @playedGame.DurationMinutes min
+            </td>
+            <td>
+                @(string.Join(',', playedGame.Players
+                    .Where(player => player.IsWinner)
+                    .Select(player => player.Name)
+                    )
+                    )
+            </td>
+            <td>
+                @(string.Join(',', playedGame.Players
+                    .Select(player => player.Name)
+                    )
+                    )
+            </td>
+        </tr>
+    }
+</table>
+
+@code {
+    private List<PlayedGame> playedGames = new();
+    protected override async Task OnInitializedAsync()
+    {
+        var request = new HttpRequestMessage(HttpMethod.Get, "/api/PlayedGames");
+
+        var client = ClientFactory.CreateClient("GameNight.ServerAPI");
+
+        var response = await client.SendAsync(request);
+
+        if (response.IsSuccessStatusCode)
+        {
+            playedGames = (await response.Content.ReadFromJsonAsync
+                <List<PlayedGame>>()) ?? new();
+            System.Console.WriteLine($"Fetched {playedGames.Count} Played Games");
+        }
+    }
+
+}
