--- a/GameNight/Client/_Imports.razor
+++ b/GameNight/Client/_Imports.razor
@@ -5,3 +5,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using GameNight.Client
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components
