--- a/GameNight/Client/Pages/Index.razor
+++ b/GameNight/Client/Pages/Index.razor
@@ -1,101 +1,7 @@
 ﻿@page "/"
-@using GameNight.Shared;
-@using System.Text.Json
-@using System.Text.Json.Serialization
-@inject IHttpClientFactory ClientFactory
-@inject NavigationManager NavManager
+@using GameNight.Client.PlayedGames
 
-<h1>Played Games</h1>
-<table id="played-games">
-    <thead>
-        <tr>
-            <th>Game Name</th>
-            <th>Date Played</th>
-            <th>Game Length</th>
-            <th>Winner(s)</th>
-            <th>Players</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-
-    <tbody>
-        @foreach (var playedGame in playedGames)
-        {
-            <tr>
-                <td>
-                    @playedGame.GameName
-                </td>
-                <td>
-                    @playedGame.StartedAtUtc.ToShortDateString()
-                </td>
-                <td>
-                    @playedGame.DurationMinutes min
-                </td>
-                <td>
-                    @(string.Join(',', playedGame.Players
-                        .Where(player => player.IsWinner)
-                        .Select(player => player.Name)
-                        )
-                        )
-                </td>
-                <td>
-                    @(string.Join(',', playedGame.Players
-                        .Select(player => player.Name)
-                        )
-                        )
-                </td>
-                <td>
-                    <button @onclick="(async () => await DeleteGame(playedGame))"> Delete</button>
-                    <button @onclick="(() => EditGame(playedGame))">Edit</button>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-<div>
-    <button @onclick="AddGameButtonClick">Add Game</button>
-</div>
+<PlayedGamesCard></PlayedGamesCard>
 
 @code {
-    private List<PlayedGame> playedGames = new();
-
-    protected override async Task OnInitializedAsync()
-    {
-        var request = new HttpRequestMessage(HttpMethod.Get, "/api/PlayedGames");
-
-        var client = ClientFactory.CreateClient("GameNight.ServerAPI");
-
-        var response = await client.SendAsync(request);
-
-        if (response.IsSuccessStatusCode)
-        {
-            playedGames = (await response.Content.ReadFromJsonAsync
-                <List<PlayedGame>>()) ?? new();
-            System.Console.WriteLine($"Fetched {playedGames.Count} Played Games");
-        }
-    }
-
-    private void AddGameButtonClick()
-    {
-        NavManager.NavigateTo("/addgame");
-    }
-
-    private async Task DeleteGame(PlayedGame playedGame)
-    {
-        var request = new HttpRequestMessage(HttpMethod.Delete, $"/api/PlayedGames/{playedGame.Id}");
-
-        var client = ClientFactory.CreateClient("GameNight.ServerAPI");
-
-        var response = await client.SendAsync(request);
-
-        if (response.IsSuccessStatusCode)
-        {
-            playedGames.Remove(playedGame);
-        }
-    }
-    private void EditGame(PlayedGame playedGame)
-    {
-        NavManager.NavigateTo($"/addgame/{playedGame.Id}");
-    }
-
 }
