--- a/GameNight/Client/PlayedGames/AddPlayedGameForm.razor
+++ b/GameNight/Client/PlayedGames/AddPlayedGameForm.razor
@@ -16,14 +16,8 @@
             
             <MudNumericField Label="Duration(minutes)" @bind-Value="PlayedGame.DurationMinutes"></MudNumericField>
         </div>
-        <MudButton @onclick="AddPlayer">Add Player</MudButton>
-        <div>
-            @foreach(var player in PlayedGame.Players){
-                <MudTextField Label="Player Name" @bind-Value="player.Name"></MudTextField>
-                <MudCheckBox Label="Winner" @bind-Checked="player.IsWinner"></MudCheckBox>
-            }
-            
-        </div>
+
+        <PlayerGrid Players="@PlayedGame.Players"></PlayerGrid>
      
         
 
@@ -32,17 +26,7 @@
 
 @code {
     [Parameter]
-    public PlayedGame PlayedGame { get; set; } = new();
-
-    private void AddPlayer()
-    {
-        PlayedGame.Players.Add(new());
-    }
-
-
-    
-
-    
+    public PlayedGame PlayedGame { get; set; } = new(); 
 
     
    
