--- a/GameNight/Client/_Imports.razor
+++ b/GameNight/Client/_Imports.razor
@@ -1,9 +1,14 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.JSInterop
 @using GameNight.Client
-@using Microsoft.AspNetCore.Components.Forms
+@using GameNight.Client.Layout
 @using Microsoft.AspNetCore.Components
+@using MudBlazor
